PRSD-1640: updated one of the messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1084,7 +1084,7 @@ forms.selectAddress.error.missing=Select an address
 forms.selectAddress.addAddressManually=I want to manually enter my address
 
 forms.noAddressFound.heading=No matching address found for {0,,postcode} and {1,,houseNumber}
-forms.noAddressFound.english.heading=No matching address in England found for {0,,postcode} and {1,,houseNameOrNumber}
+forms.noAddressFound.english.heading=No matching address in England or Wales found for {0,,postcode} and {1,,houseNameOrNumber}
 forms.noAddressFound.paragraph.one.beforeLink=Check the property address and
 forms.noAddressFound.english.paragraph.one.beforeLink=Check the property address is in England and
 forms.noAddressFound.paragraph.one.linkText=search again.
